--- a/client/src/components/Chatbot/styles.css
+++ b/client/src/components/Chatbot/styles.css
@@ -1,15 +1,14 @@
 .chatbot-container {
-  height: 500px;
-  width: 400px;
+  height: 600px;
+  width: 450px;
   position: absolute;
-  bottom: 0;
-  left: 50;
+  bottom: 1px;
   border: 1px solid gray;
   box-shadow: 1px 1px 25px gray;
 }
 
 .chatbot-container .messages {
-  height: 390px;
+  height: 490px;
   width: 100%;
   overflow: auto;
 }
