Added different fonts for the bot and the user and also change colors for the chatbot component

--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -4,7 +4,12 @@
   font-style: normal;
 }
 @font-face {
-  font-family: Android;
-  src: url(./fonts/AndroidAssassinItalic.ttf);
-  font-style: italic;
+  font-family: Pixel;
+  src: url(./fonts/AtlantisInternational.ttf);
+  font-style: normal;
+}
+@font-face {
+  font-family: Handwriting;
+  src: url(./fonts/TOMATOES.ttf);
+  font-style: normal;
 }
