--- a/client/src/components/Chatbot/styles.css
+++ b/client/src/components/Chatbot/styles.css
@@ -5,7 +5,7 @@
   bottom: 1px;
   border: 1px solid gray;
   box-shadow: 1px 1px 25px gray;
-  background: white;
+  background: #e3f2fd;
 }
 .chatbot-container .chat-closed {
   height: 65px;
@@ -19,7 +19,10 @@
 .chatbot-container .chatbot-input-wrapper input {
   margin: 0;
   padding: 0 25px;
-  width: calc(100% - 50px);
+  width: calc(100% - 105px);
+}
+.chatbot-container .chatbot-input-wrapper input::placeholder {
+  color: #9e9e9e;
 }
 .chatbot-container .collapse-header {
   height: 45px;
