--- a/client/src/components/QuickReplies/styles.css
+++ b/client/src/components/QuickReplies/styles.css
@@ -1,4 +1,5 @@
 .quick-reply-containter {
   display: inline-block;
   margin: 5px;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 }
