--- a/client/src/components/Pages/Home/styles.css
+++ b/client/src/components/Pages/Home/styles.css
@@ -1,32 +1,71 @@
+.home-page-container strong {
+  font-weight: 600;
+}
+.home-page-container .basic-info-section h4 {
+  margin: 20px 0 0 0;
+}
 .home-page-container .basic-info-section {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
   padding: 50px 25px 25px 25px;
 }
-
 .home-page-container .basic-info-section .left-column {
   text-align: center;
   margin-right: 25px;
 }
-
+.home-page-container .basic-info-section .right-column {
+  max-width: 300px;
+}
 .home-page-container .my-profile-photo {
   width: 250px;
   border-radius: 5px;
   box-shadow: 1px 1px 10px grey;
 }
+.home-page-container .basic-info-section .job-title {
+  font-size: 20px;
+  color: gray;
+  margin: 5px 0 20px 0;
+}
+
 
 @media (max-width: 750px) {
+  .home-page-container .basic-info-section {
+    font-size: 12px;
+  }
+  .home-page-container .basic-info-section h4 {
+    font-size: 22px;
+    margin: 0;
+    font-weight: 600;
+  }
+  .home-page-container .basic-info-section .job-title {
+    font-size: 16px;
+    color: gray;
+    margin-bottom: 10px;
+  }
+  .home-page-container .basic-info-section p {
+    font-size: 12px;
+    margin: 5px 0;
+  }
   .home-page-container .my-profile-photo {
     width: 150px;
   }
 }
 
 @media (max-width: 500px) {
+  .home-page-container .basic-info-section {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .home-page-container .basic-info-section .left-column {
+    margin: 0;
+  }
   .home-page-container .my-profile-photo {
     width: 200px;
   }
-
-  .home-page-container .basic-info-section {
-    flex-direction: column;
+  .home-page-container .basic-info-section .right-column {
+    text-align: center;
+    max-width: none;
+    margin-top: 25px;
   }
 }
