--- a/client/src/components/Pages/Home/styles.css
+++ b/client/src/components/Pages/Home/styles.css
@@ -1,5 +1,7 @@
 .home-page-container {
   padding-bottom: 100px;
+  max-width: 800px;
+  margin: auto;
 }
 .home-page-container strong {
   font-weight: 600;
