--- a/client/src/components/Common/HobbyItem/styles.css
+++ b/client/src/components/Common/HobbyItem/styles.css
@@ -1,28 +1,39 @@
 .hobby-container {
   margin: 20px 0;
+  display: flex;
+  background: #eeeeee;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 1px 1px 10px grey;
 }
-
+.hobby-container .visual {
+  text-align: center;
+}
 .hobby-container .image {
   width: 100%;
-  max-width: 150px;
-  margin: auto;
+  max-width: 100px;
 }
-
 .hobby-container .name {
-  margin: 0;
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 20px;
+  font-weight: 600;
 }
-
 .hobby-container .description {
   text-align: justify;
   text-indent: 15px;
 }
 
-@media (max-width: 750px) {
-  
-}
-
 @media (max-width: 600px) {
   .hobby-container {
-    text-align: center;
+    margin: 0 0 10px 0;
+    padding: 0 10px;
+    display: block;
+    background: none;
+    border-radius: unset;
+    box-shadow: none;
+  }
+  .hobby-container .image {
+    max-width: 150px;
   }
 }
