--- a/client/src/components/Pages/Home/styles.css
+++ b/client/src/components/Pages/Home/styles.css
@@ -10,7 +10,7 @@
   margin: 20px 0 0 0;
 }
 .home-page-container .section {
-  padding: 25px;
+  padding: 10px 25px;
 }
 .home-page-container .basic-info-section {
   margin-top: 25px;
