DEV-14 added images and their representation for the certification item components

--- a/client/src/components/Common/CertificationItem/styles.css
+++ b/client/src/components/Common/CertificationItem/styles.css
@@ -1,4 +1,9 @@
-.certification-container {
-  padding: 15px;
-  background: lightgray;
+.certification-container .image {
+  width: 100%;
+}
+
+.certification-container .title {
+ text-align: center;
+ font-size: 16px;
+ font-weight: bold;
 }
