--- a/client/src/components/Pages/Education/styles.css
+++ b/client/src/components/Pages/Education/styles.css
@@ -1,5 +1,5 @@
 .education-section-container .certifications-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 10px;
+  grid-gap: 50px 25px;
 }
